☕️ Pre-sealed classes test